fix 3 arrows buttons alignment

--- a/style.css
+++ b/style.css
@@ -378,6 +378,45 @@ body {
   display:none;
 }
 
+#c0EX7l7zZPGP0uWm {
+  max-width: 27px;
+}
+
+#V3jwsha2EukhcwJy {
+  max-width: 17px;
+  max-height: 6px;
+  margin-left: -3px;
+}
+
+#esb8fhPKX2Ah7zNk {
+  margin-top: -4px;
+  margin-left: 10px;
+}
+
+#OWeOsstAFJisk0ov {
+  max-width: 27px;
+  max-height: 27px;
+}
+
+#yItPfgNAO8t8nCq7 {
+  max-width: 17px;
+  max-height: 7px;
+  margin-top: 3px;
+  margin-left: 8px;
+}
+
+#XeLllHxQu5NW9GpY {
+  margin-top: 7px;
+  margin-left: 10px;
+}
+
+#JnkWjzwL0HrR1Ana {
+  margin-top: 5px;
+}
+
+#cghLLW5NPaWyA5zi {
+  margin-left: 1px;
+}
 
 @media (max-width: 768px) { /* Adjust breakpoint as needed */
   .column {
